[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/drag_fruit.gd" type="Script" id=1]


[sub_resource type="Animation" id=1]
resource_name = "drop"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 10 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 4.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.5, 1.5 )

[node name="drag_fruit" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/drop = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="touch_area" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="touch_area"]
shape = SubResource( 2 )

[node name="pos_area" type="Area2D" parent="."]
input_pickable = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="pos_area"]
shape = SubResource( 3 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="input_event" from="touch_area" to="." method="_on_Area2D_input_event"]
